tests/parser/bad/type_t-map-with.scilla
scilla_version 0

library TestLib

(* Map key types begin capitalised *)

let f : Map faulty
